--- a/Protfolio Front End/index.html
+++ b/Protfolio Front End/index.html
@@ -25,12 +25,10 @@
             <div class="home-content">
                 <h1>Hi, I'm Anurag Anand</h1>
                 <h3>Frontend Developer</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing 
-                    elit. Ipsam ea voluptates corrupti repudiandae 
-                    quibusdam consequatur vel aliquid, ex, saepe 
-                    voluptatum modi expedita. Laboriosam at doloremque 
-                    quia quidem?
-                </p>
+                <p>As a fresher in the field of web development, I am enthusiastic and eager to embark on a journey of continuous learning
+                     and growth. I recognize the importance of building a strong foundation and gaining hands-on experience to become a 
+                     proficient web developer. </p>
+                      
                 <div class="btn-box">
                     <a href="#">Hire Me</a>
                     <a href="#">Let's Talk</a>
