--- a/project1/index.html
+++ b/project1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Web site will login and register</title>
+    <title>MAA World</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -85,7 +85,7 @@
                 </div>
                 <div class="remember-forgot">
                     <label>
-                        <input type="checkbox">Agree to terms & conditions
+                        <input type="checkbox">Agree to terms and conditions
                     </label>
                 </div>
                 <button type="submit" class="btn">Register</button>
