adding all page

--- a/Protfolio Front End/index.html
+++ b/Protfolio Front End/index.html
@@ -12,13 +12,13 @@
     </head>
     <body>
         <header class="header">
-            <a href="#" class="logo">Anurag</a>
+            <a href="" class="logo">Anurag</a>
             <nav class="navbar">
-                <a href="#" class="active">Home</a>
-                <a href="#">About</a>
-                <a href="#">Study</a>
-                <a href="#">Portfolio</a>
-                <a href="#">Contact</a>
+                <a href="" class="active">Home</a>
+                <a href="about.html">About</a>
+                <a href="study.html">Study</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </header>
         <section class="home">
@@ -30,14 +30,14 @@
                      proficient web developer. </p>
                       
                 <div class="btn-box">
-                    <a href="#">Hire Me</a>
-                    <a href="#">Let's Talk</a>
+                    <a href="mailto:anurag.anand.1918@gmail.com">Hire Me</a>
+                    <a href="tel:+918709730591">Let's Talk</a>
                 </div>
             </div>
             <div class="home-sci">
-                <a href="#"><i class="bx bxl-facebook"></i></a>
-                <a href="#"><i class="bx bxl-twitter"></i></a>
-                <a href="#"><i class="bx bxl-linkedin" ></i></a>
+                <a href="https://www.youtube.com/@CodewithMAA"><i class="bx bxl-youtube"></i></a>
+                <a href="https://github.com/ma-anand"><i class="bx bxl-github"></i></a>
+                <a href="https://linkedin.com/in/minanurag3"><i class="bx bxl-linkedin" ></i></a>
             </div>
             <span class="home-imgHover"></span>
         </section>
